--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ select {
     margin: 0.5rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    border: 1px solid var(--cl-border);
     background: var(--cl-dark);
     color: var(--cl-light);
 }
