--- a/style.css
+++ b/style.css
@@ -66,13 +66,13 @@ label {
     font-size: 1rem;
 }
 
-.result-section {
+/* .result-section {
     width: 438px;
-}
+} */
 
 .result-box {
     background: var(--cl-dark);
-    width: 100%;
+    width: 438px;
     min-height: 55px;
     padding: 1rem;
     border: 1px solid var(--cl-border);
@@ -94,8 +94,8 @@ label {
 }
 
 @media only screen and (max-width: 500px) {
-    .result-section {
-        width: 90vw;
+    .result-box {
+        width: 82vw;
     }
 }
 
